# sb-rotary-encoder-rs

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  tests.rs
